tests/v2.1-legacy/invalid/missing_version.aif
# VIOLATION: No @AIF/ version line
# Expected: rejected — version marker is required as first line

FROM: agent_pm
TO: agent_rd
TYPE: TASK
ID: T001
REF: -
REPORT_TO: agent_pm
---
GOAL: "Do something"
PRIORITY: MED
